Progetto Anna/Project_AvenaCappelliRossi/src/parser/SVMParser.java
// Generated from C:/Users/Laura/eclipse-workspace/CEI-FOOL/src/parser\SVM.g4 by ANTLR 4.7
package parser;

import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUSH=1, POP=2, ALLOC=3, REMOVE=4, ADD=5, SUB=6, MULT=7, DIV=8, LOADW=9, 
		STOREW=10, LOADF=11, STOREF=12, BRANCH=13, BRANCHEQ=14, BRANCHGREATEREQ=15, 
		BRANCHLESSEQ=16, JS=17, JDT=18, LOADRA=19, STORERA=20, LOADRV=21, STORERV=22, 
		LOADFP=23, STOREFP=24, COPYFP=25, LOADHP=26, STOREHP=27, LOADDP=28, STOREDP=29, 
		LOADIO=30, STOREIO=31, LOADOP=32, STOREOP=33, PRINT=34, HALT=35, COL=36, 
		LABEL=37, NUMBER=38, WHITESP=39;
	public static final int
		RULE_assembly = 0, RULE_push = 1, RULE_pop = 2, RULE_alloc = 3, RULE_remove = 4, 
		RULE_add = 5, RULE_sub = 6, RULE_mult = 7, RULE_div = 8, RULE_loadWord = 9, 
		RULE_storeWord = 10, RULE_loadField = 11, RULE_storeField = 12, RULE_label = 13, 
		RULE_branch = 14, RULE_branchEqual = 15, RULE_branchLessEqual = 16, RULE_branchGreaterEqual = 17, 
		RULE_js = 18, RULE_jumpDispatchTable = 19, RULE_loadReturnAddress = 20, 
		RULE_storeReturnAddress = 21, RULE_loadReturnValue = 22, RULE_storeReturnValue = 23, 
		RULE_loadFramePointer = 24, RULE_storeFramePointer = 25, RULE_copyFramePointer = 26, 
		RULE_loadHeapPointer = 27, RULE_storeHeapPointer = 28, RULE_loadDispatchPointer = 29, 
		RULE_storeDispatchPointer = 30, RULE_loadInfoObject = 31, RULE_storeInfoObject = 32, 
		RULE_loadObjectPointer = 33, RULE_storeObjectPointer = 34, RULE_print = 35, 
		RULE_halt = 36;
	public static final String[] ruleNames = {
		"assembly", "push", "pop", "alloc", "remove", "add", "sub", "mult", "div", 
		"loadWord", "storeWord", "loadField", "storeField", "label", "branch", 
		"branchEqual", "branchLessEqual", "branchGreaterEqual", "js", "jumpDispatchTable", 
		"loadReturnAddress", "storeReturnAddress", "loadReturnValue", "storeReturnValue", 
		"loadFramePointer", "storeFramePointer", "copyFramePointer", "loadHeapPointer", 
		"storeHeapPointer", "loadDispatchPointer", "storeDispatchPointer", "loadInfoObject", 
		"storeInfoObject", "loadObjectPointer", "storeObjectPointer", "print", 
		"halt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'push'", "'pop'", "'alloc'", "'remove'", "'add'", "'sub'", "'mult'", 
		"'div'", "'lw'", "'sw'", "'lf'", "'sf'", "'b'", "'beq'", "'bgeq'", "'bleq'", 
		"'js'", "'jdt'", "'lra'", "'sra'", "'lrv'", "'srv'", "'lfp'", "'sfp'", 
		"'cfp'", "'lhp'", "'shp'", "'ldp'", "'sdp'", "'lio'", "'sio'", "'lop'", 
		"'sop'", "'print'", "'halt'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PUSH", "POP", "ALLOC", "REMOVE", "ADD", "SUB", "MULT", "DIV", "LOADW", 
		"STOREW", "LOADF", "STOREF", "BRANCH", "BRANCHEQ", "BRANCHGREATEREQ", 
		"BRANCHLESSEQ", "JS", "JDT", "LOADRA", "STORERA", "LOADRV", "STORERV", 
		"LOADFP", "STOREFP", "COPYFP", "LOADHP", "STOREHP", "LOADDP", "STOREDP", 
		"LOADIO", "STOREIO", "LOADOP", "STOREOP", "PRINT", "HALT", "COL", "LABEL", 
		"NUMBER", "WHITESP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SVM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	      
	    public int[] code = new int[ExecuteVM.CODESIZE];
	    private int i = 0;
	    public ArrayList<ArrayList<Integer>> dispatchTable = new ArrayList<>();
	    public HashMap<String,Integer> labelAdd = new HashMap<String,Integer>();
	    public HashMap<Integer,String> labelRef = new HashMap<Integer,String>();
	        

	public SVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AssemblyContext extends ParserRuleContext {
		public List<PushContext> push() {
			return getRuleContexts(PushContext.class);
		}
		public PushContext push(int i) {
			return getRuleContext(PushContext.class,i);
		}
		public List<PopContext> pop() {
			return getRuleContexts(PopContext.class);
		}
		public PopContext pop(int i) {
			return getRuleContext(PopContext.class,i);
		}
		public List<AllocContext> alloc() {
			return getRuleContexts(AllocContext.class);
		}
		public AllocContext alloc(int i) {
			return getRuleContext(AllocContext.class,i);
		}
		public List<RemoveContext> remove() {
			return getRuleContexts(RemoveContext.class);
		}
		public RemoveContext remove(int i) {
			return getRuleContext(RemoveContext.class,i);
		}
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public List<SubContext> sub() {
			return getRuleContexts(SubContext.class);
		}
		public SubContext sub(int i) {
			return getRuleContext(SubContext.class,i);
		}
		public List<MultContext> mult() {
			return getRuleContexts(MultContext.class);
		}
		public MultContext mult(int i) {
			return getRuleContext(MultContext.class,i);
		}
		public List<DivContext> div() {
			return getRuleContexts(DivContext.class);
		}
		public DivContext div(int i) {
			return getRuleContext(DivContext.class,i);
		}
		public List<LoadWordContext> loadWord() {
			return getRuleContexts(LoadWordContext.class);
		}
		public LoadWordContext loadWord(int i) {
			return getRuleContext(LoadWordContext.class,i);
		}
		public List<StoreWordContext> storeWord() {
			return getRuleContexts(StoreWordContext.class);
		}
		public StoreWordContext storeWord(int i) {
			return getRuleContext(StoreWordContext.class,i);
		}
		public List<LoadFieldContext> loadField() {
			return getRuleContexts(LoadFieldContext.class);
		}
		public LoadFieldContext loadField(int i) {
			return getRuleContext(LoadFieldContext.class,i);
		}
		public List<StoreFieldContext> storeField() {
			return getRuleContexts(StoreFieldContext.class);
		}
		public StoreFieldContext storeField(int i) {
			return getRuleContext(StoreFieldContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<BranchContext> branch() {
			return getRuleContexts(BranchContext.class);
		}
		public BranchContext branch(int i) {
			return getRuleContext(BranchContext.class,i);
		}
		public List<BranchEqualContext> branchEqual() {
			return getRuleContexts(BranchEqualContext.class);
		}
		public BranchEqualContext branchEqual(int i) {
			return getRuleContext(BranchEqualContext.class,i);
		}
		public List<BranchGreaterEqualContext> branchGreaterEqual() {
			return getRuleContexts(BranchGreaterEqualContext.class);
		}
		public BranchGreaterEqualContext branchGreaterEqual(int i) {
			return getRuleContext(BranchGreaterEqualContext.class,i);
		}
		public List<BranchLessEqualContext> branchLessEqual() {
			return getRuleContexts(BranchLessEqualContext.class);
		}
		public BranchLessEqualContext branchLessEqual(int i) {
			return getRuleContext(BranchLessEqualContext.class,i);
		}
		public List<JsContext> js() {
			return getRuleContexts(JsContext.class);
		}
		public JsContext js(int i) {
			return getRuleContext(JsContext.class,i);
		}
		public List<JumpDispatchTableContext> jumpDispatchTable() {
			return getRuleContexts(JumpDispatchTableContext.class);
		}
		public JumpDispatchTableContext jumpDispatchTable(int i) {
			return getRuleContext(JumpDispatchTableContext.class,i);
		}
		public List<LoadReturnAddressContext> loadReturnAddress() {
			return getRuleContexts(LoadReturnAddressContext.class);
		}
		public LoadReturnAddressContext loadReturnAddress(int i) {
			return getRuleContext(LoadReturnAddressContext.class,i);
		}
		public List<StoreReturnAddressContext> storeReturnAddress() {
			return getRuleContexts(StoreReturnAddressContext.class);
		}
		public StoreReturnAddressContext storeReturnAddress(int i) {
			return getRuleContext(StoreReturnAddressContext.class,i);
		}
		public List<LoadReturnValueContext> loadReturnValue() {
			return getRuleContexts(LoadReturnValueContext.class);
		}
		public LoadReturnValueContext loadReturnValue(int i) {
			return getRuleContext(LoadReturnValueContext.class,i);
		}
		public List<StoreReturnValueContext> storeReturnValue() {
			return getRuleContexts(StoreReturnValueContext.class);
		}
		public StoreReturnValueContext storeReturnValue(int i) {
			return getRuleContext(StoreReturnValueContext.class,i);
		}
		public List<LoadFramePointerContext> loadFramePointer() {
			return getRuleContexts(LoadFramePointerContext.class);
		}
		public LoadFramePointerContext loadFramePointer(int i) {
			return getRuleContext(LoadFramePointerContext.class,i);
		}
		public List<StoreFramePointerContext> storeFramePointer() {
			return getRuleContexts(StoreFramePointerContext.class);
		}
		public StoreFramePointerContext storeFramePointer(int i) {
			return getRuleContext(StoreFramePointerContext.class,i);
		}
		public List<CopyFramePointerContext> copyFramePointer() {
			return getRuleContexts(CopyFramePointerContext.class);
		}
		public CopyFramePointerContext copyFramePointer(int i) {
			return getRuleContext(CopyFramePointerContext.class,i);
		}
		public List<LoadHeapPointerContext> loadHeapPointer() {
			return getRuleContexts(LoadHeapPointerContext.class);
		}
		public LoadHeapPointerContext loadHeapPointer(int i) {
			return getRuleContext(LoadHeapPointerContext.class,i);
		}
		public List<StoreHeapPointerContext> storeHeapPointer() {
			return getRuleContexts(StoreHeapPointerContext.class);
		}
		public StoreHeapPointerContext storeHeapPointer(int i) {
			return getRuleContext(StoreHeapPointerContext.class,i);
		}
		public List<LoadDispatchPointerContext> loadDispatchPointer() {
			return getRuleContexts(LoadDispatchPointerContext.class);
		}
		public LoadDispatchPointerContext loadDispatchPointer(int i) {
			return getRuleContext(LoadDispatchPointerContext.class,i);
		}
		public List<StoreDispatchPointerContext> storeDispatchPointer() {
			return getRuleContexts(StoreDispatchPointerContext.class);
		}
		public StoreDispatchPointerContext storeDispatchPointer(int i) {
			return getRuleContext(StoreDispatchPointerContext.class,i);
		}
		public List<StoreInfoObjectContext> storeInfoObject() {
			return getRuleContexts(StoreInfoObjectContext.class);
		}
		public StoreInfoObjectContext storeInfoObject(int i) {
			return getRuleContext(StoreInfoObjectContext.class,i);
		}
		public List<LoadInfoObjectContext> loadInfoObject() {
			return getRuleContexts(LoadInfoObjectContext.class);
		}
		public LoadInfoObjectContext loadInfoObject(int i) {
			return getRuleContext(LoadInfoObjectContext.class,i);
		}
		public List<LoadObjectPointerContext> loadObjectPointer() {
			return getRuleContexts(LoadObjectPointerContext.class);
		}
		public LoadObjectPointerContext loadObjectPointer(int i) {
			return getRuleContext(LoadObjectPointerContext.class,i);
		}
		public List<StoreObjectPointerContext> storeObjectPointer() {
			return getRuleContexts(StoreObjectPointerContext.class);
		}
		public StoreObjectPointerContext storeObjectPointer(int i) {
			return getRuleContext(StoreObjectPointerContext.class,i);
		}
		public List<PrintContext> print() {
			return getRuleContexts(PrintContext.class);
		}
		public PrintContext print(int i) {
			return getRuleContext(PrintContext.class,i);
		}
		public List<HaltContext> halt() {
			return getRuleContexts(HaltContext.class);
		}
		public HaltContext halt(int i) {
			return getRuleContext(HaltContext.class,i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAssembly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUSH) | (1L << POP) | (1L << ALLOC) | (1L << REMOVE) | (1L << ADD) | (1L << SUB) | (1L << MULT) | (1L << DIV) | (1L << LOADW) | (1L << STOREW) | (1L << LOADF) | (1L << STOREF) | (1L << BRANCH) | (1L << BRANCHEQ) | (1L << BRANCHGREATEREQ) | (1L << BRANCHLESSEQ) | (1L << JS) | (1L << JDT) | (1L << LOADRA) | (1L << STORERA) | (1L << LOADRV) | (1L << STORERV) | (1L << LOADFP) | (1L << STOREFP) | (1L << COPYFP) | (1L << LOADHP) | (1L << STOREHP) | (1L << LOADDP) | (1L << STOREDP) | (1L << LOADIO) | (1L << STOREIO) | (1L << LOADOP) | (1L << STOREOP) | (1L << PRINT) | (1L << HALT) | (1L << LABEL))) != 0)) {
				{
				setState(110);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PUSH:
					{
					setState(74);
					push();
					}
					break;
				case POP:
					{
					setState(75);
					pop();
					}
					break;
				case ALLOC:
					{
					setState(76);
					alloc();
					}
					break;
				case REMOVE:
					{
					setState(77);
					remove();
					}
					break;
				case ADD:
					{
					setState(78);
					add();
					}
					break;
				case SUB:
					{
					setState(79);
					sub();
					}
					break;
				case MULT:
					{
					setState(80);
					mult();
					}
					break;
				case DIV:
					{
					setState(81);
					div();
					}
					break;
				case LOADW:
					{
					setState(82);
					loadWord();
					}
					break;
				case STOREW:
					{
					setState(83);
					storeWord();
					}
					break;
				case LOADF:
					{
					setState(84);
					loadField();
					}
					break;
				case STOREF:
					{
					setState(85);
					storeField();
					}
					break;
				case LABEL:
					{
					setState(86);
					label();
					}
					break;
				case BRANCH:
					{
					setState(87);
					branch();
					}
					break;
				case BRANCHEQ:
					{
					setState(88);
					branchEqual();
					}
					break;
				case BRANCHGREATEREQ:
					{
					setState(89);
					branchGreaterEqual();
					}
					break;
				case BRANCHLESSEQ:
					{
					setState(90);
					branchLessEqual();
					}
					break;
				case JS:
					{
					setState(91);
					js();
					}
					break;
				case JDT:
					{
					setState(92);
					jumpDispatchTable();
					}
					break;
				case LOADRA:
					{
					setState(93);
					loadReturnAddress();
					}
					break;
				case STORERA:
					{
					setState(94);
					storeReturnAddress();
					}
					break;
				case LOADRV:
					{
					setState(95);
					loadReturnValue();
					}
					break;
				case STORERV:
					{
					setState(96);
					storeReturnValue();
					}
					break;
				case LOADFP:
					{
					setState(97);
					loadFramePointer();
					}
					break;
				case STOREFP:
					{
					setState(98);
					storeFramePointer();
					}
					break;
				case COPYFP:
					{
					setState(99);
					copyFramePointer();
					}
					break;
				case LOADHP:
					{
					setState(100);
					loadHeapPointer();
					}
					break;
				case STOREHP:
					{
					setState(101);
					storeHeapPointer();
					}
					break;
				case LOADDP:
					{
					setState(102);
					loadDispatchPointer();
					}
					break;
				case STOREDP:
					{
					setState(103);
					storeDispatchPointer();
					}
					break;
				case STOREIO:
					{
					setState(104);
					storeInfoObject();
					}
					break;
				case LOADIO:
					{
					setState(105);
					loadInfoObject();
					}
					break;
				case LOADOP:
					{
					setState(106);
					loadObjectPointer();
					}
					break;
				case STOREOP:
					{
					setState(107);
					storeObjectPointer();
					}
					break;
				case PRINT:
					{
					setState(108);
					print();
					}
					break;
				case HALT:
					{
					setState(109);
					halt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PushContext extends ParserRuleContext {
		public Token n;
		public Token l;
		public TerminalNode PUSH() { return getToken(SVMParser.PUSH, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public TerminalNode LABEL() { return getToken(SVMParser.LABEL, 0); }
		public PushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitPush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PushContext push() throws RecognitionException {
		PushContext _localctx = new PushContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_push);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(PUSH);
				setState(116);
				((PushContext)_localctx).n = match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(PUSH);
				setState(118);
				((PushContext)_localctx).l = match(LABEL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PopContext extends ParserRuleContext {
		public TerminalNode POP() { return getToken(SVMParser.POP, 0); }
		public PopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitPop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PopContext pop() throws RecognitionException {
		PopContext _localctx = new PopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(POP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllocContext extends ParserRuleContext {
		public Token n;
		public Token l;
		public TerminalNode ALLOC() { return getToken(SVMParser.ALLOC, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public TerminalNode LABEL() { return getToken(SVMParser.LABEL, 0); }
		public AllocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alloc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAlloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllocContext alloc() throws RecognitionException {
		AllocContext _localctx = new AllocContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_alloc);
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(ALLOC);
				setState(124);
				((AllocContext)_localctx).n = match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(ALLOC);
				setState(126);
				((AllocContext)_localctx).l = match(LABEL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RemoveContext extends ParserRuleContext {
		public TerminalNode REMOVE() { return getToken(SVMParser.REMOVE, 0); }
		public RemoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_remove; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitRemove(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RemoveContext remove() throws RecognitionException {
		RemoveContext _localctx = new RemoveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_remove);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(REMOVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(SVMParser.ADD, 0); }
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAdd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ADD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(SVMParser.SUB, 0); }
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitSub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(SUB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultContext extends ParserRuleContext {
		public TerminalNode MULT() { return getToken(SVMParser.MULT, 0); }
		public MultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mult; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitMult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultContext mult() throws RecognitionException {
		MultContext _localctx = new MultContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mult);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(MULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public TerminalNode DIV() { return getToken(SVMParser.DIV, 0); }
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_div);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(DIV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadWordContext extends ParserRuleContext {
		public TerminalNode LOADW() { return getToken(SVMParser.LOADW, 0); }
		public LoadWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadWord; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitLoadWord(this);
			else return visitor.visitChildren(this);
		}
	}
